refaire embedding avec sentence transformers anglais de roberta (tweet)

--- a/Notebooks/03_embeddings_and_storage.ipynb
+++ b/Notebooks/03_embeddings_and_storage.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv(\"../data/Processed/clean_data.csv\")"
+    "data = pd.read_csv(\"../Data/Processed/clean_data.csv\")"
    ]
   },
   {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "a433e214",
    "metadata": {},
    "outputs": [
@@ -165,29 +165,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\elabi\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\elabi\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
+      "No sentence-transformers model found with name cardiffnlp/twitter-roberta-base-sentiment. Creating a new one with mean pooling.\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at cardiffnlp/twitter-roberta-base-sentiment and are newly initialized: ['pooler.dense.bias', 'pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
    ],
    "source": [
     "from sentence_transformers import  SentenceTransformer\n",
     "model=SentenceTransformer(\n",
-    "    \"paraphrase-multilingual-MiniLM-L12-v2\"\n",
+    "    \"cardiffnlp/twitter-roberta-base-sentiment\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "816afed1",
    "metadata": {},
    "outputs": [],
@@ -197,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "19179018",
    "metadata": {},
    "outputs": [
@@ -205,7 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Batches: 100%|██████████| 451/451 [01:12<00:00,  6.22it/s]\n"
+      "Batches: 100%|██████████| 451/451 [04:10<00:00,  1.80it/s]\n"
      ]
     }
    ],
@@ -218,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "9ea71953",
    "metadata": {},
    "outputs": [],
@@ -228,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "3b8cb112",
    "metadata": {},
    "outputs": [],
@@ -239,8 +232,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d58c4906",
+   "metadata": {},
+   "source": [
+    "[0.09349196, 0.22166443, -0.10611222, 0.148594...]\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "7d3cf034",
    "metadata": {},
    "outputs": [
@@ -277,35 +278,35 @@
        "      <td>what said</td>\n",
        "      <td>neutral</td>\n",
        "      <td>Virgin America</td>\n",
-       "      <td>[0.09349196, 0.22166443, -0.10611222, 0.148594...</td>\n",
+       "      <td>[-0.14999603, -0.53225005, -0.14324617, -0.822...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>plus youve added commercials to the experience...</td>\n",
        "      <td>positive</td>\n",
        "      <td>Virgin America</td>\n",
-       "      <td>[0.044986486, -0.303321, 0.066817686, -0.23257...</td>\n",
+       "      <td>[-0.025072118, -0.5276757, -0.16144873, -0.449...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>i didnt today must mean i need to take another...</td>\n",
        "      <td>neutral</td>\n",
        "      <td>Virgin America</td>\n",
-       "      <td>[0.26666784, -0.032983124, 0.24450608, -0.0832...</td>\n",
+       "      <td>[-0.13152163, -0.5167499, 0.09803597, -0.75049...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>its really aggressive to blast obnoxious enter...</td>\n",
        "      <td>negative</td>\n",
        "      <td>Virgin America</td>\n",
-       "      <td>[0.38574392, -0.18187732, -0.023512818, -0.142...</td>\n",
+       "      <td>[0.0893467, -0.4533559, 0.019523002, -0.772465...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>and its a really big bad thing about it</td>\n",
        "      <td>negative</td>\n",
        "      <td>Virgin America</td>\n",
-       "      <td>[0.026368542, 0.030634426, -0.10443704, -0.042...</td>\n",
+       "      <td>[-0.10262265, -0.60638845, 0.27071747, -0.6140...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -320,14 +321,14 @@
        "4            and its a really big bad thing about it          negative   \n",
        "\n",
        "          airline                                         embeddings  \n",
-       "0  Virgin America  [0.09349196, 0.22166443, -0.10611222, 0.148594...  \n",
-       "1  Virgin America  [0.044986486, -0.303321, 0.066817686, -0.23257...  \n",
-       "2  Virgin America  [0.26666784, -0.032983124, 0.24450608, -0.0832...  \n",
-       "3  Virgin America  [0.38574392, -0.18187732, -0.023512818, -0.142...  \n",
-       "4  Virgin America  [0.026368542, 0.030634426, -0.10443704, -0.042...  "
+       "0  Virgin America  [-0.14999603, -0.53225005, -0.14324617, -0.822...  \n",
+       "1  Virgin America  [-0.025072118, -0.5276757, -0.16144873, -0.449...  \n",
+       "2  Virgin America  [-0.13152163, -0.5167499, 0.09803597, -0.75049...  \n",
+       "3  Virgin America  [0.0893467, -0.4533559, 0.019523002, -0.772465...  \n",
+       "4  Virgin America  [-0.10262265, -0.60638845, 0.27071747, -0.6140...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "29a4e17d",
    "metadata": {},
    "outputs": [],
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "27d1fe35",
    "metadata": {},
    "outputs": [],
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "66a073f4",
    "metadata": {},
    "outputs": [
@@ -420,7 +421,7 @@
        "      <td>no not boarding order someone boarded with ser...</td>\n",
        "      <td>negative</td>\n",
        "      <td>Delta</td>\n",
-       "      <td>[0.37817588, -0.05232914, -0.06892034, -0.0444...</td>\n",
+       "      <td>[-0.030747607, -0.48066524, -0.099700734, -0.8...</td>\n",
        "      <td>review_7624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -428,7 +429,7 @@
        "      <td>sucks delayed my moms flight x cancelled fligh...</td>\n",
        "      <td>negative</td>\n",
        "      <td>US Airways</td>\n",
-       "      <td>[0.068017125, -0.14787968, 0.101590306, 0.0563...</td>\n",
+       "      <td>[-0.024749225, -0.19862664, -0.079210095, -0.7...</td>\n",
        "      <td>review_9783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -436,7 +437,7 @@
        "      <td>rt our fleets on fleek</td>\n",
        "      <td>neutral</td>\n",
        "      <td>Delta</td>\n",
-       "      <td>[-0.28331494, 0.019435078, 0.06429436, -0.2808...</td>\n",
+       "      <td>[-0.13899958, -0.6026296, -0.037226222, -0.307...</td>\n",
        "      <td>review_7088</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -444,7 +445,7 @@
        "      <td>when i read it say in some cases can you pleas...</td>\n",
        "      <td>negative</td>\n",
        "      <td>United</td>\n",
-       "      <td>[0.19091901, 0.022858623, -0.012275932, 0.1965...</td>\n",
+       "      <td>[-0.029725853, -0.9434178, -0.061759353, -0.50...</td>\n",
        "      <td>review_2157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -452,7 +453,7 @@
        "      <td>i am dealing with the reflight booking problem...</td>\n",
        "      <td>neutral</td>\n",
        "      <td>American</td>\n",
-       "      <td>[0.07791889, -0.235583, -0.21146771, 0.0376822...</td>\n",
+       "      <td>[-0.18219015, -0.33504093, 0.011790585, -0.755...</td>\n",
        "      <td>review_12118</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -468,11 +469,11 @@
        "12118  i am dealing with the reflight booking problem...           neutral   \n",
        "\n",
        "          airline                                         embeddings  \\\n",
-       "7624        Delta  [0.37817588, -0.05232914, -0.06892034, -0.0444...   \n",
-       "9783   US Airways  [0.068017125, -0.14787968, 0.101590306, 0.0563...   \n",
-       "7088        Delta  [-0.28331494, 0.019435078, 0.06429436, -0.2808...   \n",
-       "2157       United  [0.19091901, 0.022858623, -0.012275932, 0.1965...   \n",
-       "12118    American  [0.07791889, -0.235583, -0.21146771, 0.0376822...   \n",
+       "7624        Delta  [-0.030747607, -0.48066524, -0.099700734, -0.8...   \n",
+       "9783   US Airways  [-0.024749225, -0.19862664, -0.079210095, -0.7...   \n",
+       "7088        Delta  [-0.13899958, -0.6026296, -0.037226222, -0.307...   \n",
+       "2157       United  [-0.029725853, -0.9434178, -0.061759353, -0.50...   \n",
+       "12118    American  [-0.18219015, -0.33504093, 0.011790585, -0.755...   \n",
        "\n",
        "                 id  \n",
        "7624    review_7624  \n",
@@ -482,7 +483,7 @@
        "12118  review_12118  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "54ad4195",
    "metadata": {},
    "outputs": [
@@ -531,7 +532,7 @@
        "      <td>why doesnt your terminal b in lga have prechec...</td>\n",
        "      <td>negative</td>\n",
        "      <td>Southwest</td>\n",
-       "      <td>[0.3199375, 0.28107005, -0.08896221, -0.276634...</td>\n",
+       "      <td>[-0.012143357, -0.062115833, -0.18422022, -0.8...</td>\n",
        "      <td>review_5868</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -539,7 +540,7 @@
        "      <td>b boarding this attendant took his shoe ampsoc...</td>\n",
        "      <td>negative</td>\n",
        "      <td>United</td>\n",
-       "      <td>[-0.18641071, 0.21389282, 0.15308303, -0.32157...</td>\n",
+       "      <td>[0.038747367, -0.77709734, -0.3220472, -1.3697...</td>\n",
        "      <td>review_1125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -547,7 +548,7 @@
        "      <td>link doesnt work</td>\n",
        "      <td>negative</td>\n",
        "      <td>Southwest</td>\n",
-       "      <td>[-0.33605865, -0.60862505, 0.17004745, 0.06273...</td>\n",
+       "      <td>[-0.31305444, -0.20537896, -0.17505193, -0.825...</td>\n",
        "      <td>review_5765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -555,7 +556,7 @@
        "      <td>it was ua flight now im currently stuck in por...</td>\n",
        "      <td>negative</td>\n",
        "      <td>United</td>\n",
-       "      <td>[0.21065933, 0.00740448, 0.07825934, -0.082407...</td>\n",
+       "      <td>[-0.38896766, -0.113024004, -0.099490106, -0.6...</td>\n",
        "      <td>review_710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -563,7 +564,7 @@
        "      <td>i forgot that intl flights out of lax dont go ...</td>\n",
        "      <td>positive</td>\n",
        "      <td>United</td>\n",
-       "      <td>[0.26278704, -0.20168234, 0.06297917, -0.19465...</td>\n",
+       "      <td>[0.06962187, -0.40473652, -0.25463948, -0.7262...</td>\n",
        "      <td>review_3582</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -579,11 +580,11 @@
        "3582  i forgot that intl flights out of lax dont go ...          positive   \n",
        "\n",
        "        airline                                         embeddings  \\\n",
-       "5868  Southwest  [0.3199375, 0.28107005, -0.08896221, -0.276634...   \n",
-       "1125     United  [-0.18641071, 0.21389282, 0.15308303, -0.32157...   \n",
-       "5765  Southwest  [-0.33605865, -0.60862505, 0.17004745, 0.06273...   \n",
-       "710      United  [0.21065933, 0.00740448, 0.07825934, -0.082407...   \n",
-       "3582     United  [0.26278704, -0.20168234, 0.06297917, -0.19465...   \n",
+       "5868  Southwest  [-0.012143357, -0.062115833, -0.18422022, -0.8...   \n",
+       "1125     United  [0.038747367, -0.77709734, -0.3220472, -1.3697...   \n",
+       "5765  Southwest  [-0.31305444, -0.20537896, -0.17505193, -0.825...   \n",
+       "710      United  [-0.38896766, -0.113024004, -0.099490106, -0.6...   \n",
+       "3582     United  [0.06962187, -0.40473652, -0.25463948, -0.7262...   \n",
        "\n",
        "               id  \n",
        "5868  review_5868  \n",
@@ -593,7 +594,7 @@
        "3582  review_3582  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "ca6da26b",
    "metadata": {},
    "outputs": [
@@ -642,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "d7c8a3a8",
    "metadata": {},
    "outputs": [],
@@ -653,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "6bcede43",
    "metadata": {},
    "outputs": [],
@@ -663,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "3c40a15c",
    "metadata": {},
    "outputs": [],
@@ -681,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "dff4fcd7",
    "metadata": {},
    "outputs": [],
@@ -705,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "e0169eba",
    "metadata": {},
    "outputs": [
@@ -713,8 +714,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "airline_train_embeddings: 100%|██████████| 6/6 [00:02<00:00,  2.21it/s]\n",
-      "airline_test_embeddings: 100%|██████████| 2/2 [00:00<00:00,  2.83it/s]\n"
+      "airline_train_embeddings: 100%|██████████| 6/6 [00:06<00:00,  1.07s/it]\n",
+      "airline_test_embeddings: 100%|██████████| 2/2 [00:01<00:00,  1.07it/s]\n"
      ]
     }
    ],
